docs: mandate Java 25 features & strict post-edit code inspection with zero warnings